[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[dependencies]
subql-indexer-utils = { git = "https://github.com/subquery/network-indexer-services.git", tag = "v2.8.1" }
bincode = "1.3"
tdn = { version = "0.10", default-features = false, features = ["single"] }
tokio = { version = "1", features = ["full"] }
tracing-subscriber = "0.3"
