[package]
name = "relay"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bincode = "1.3"
either = "1.13.0"
env_logger = "0.11.5"
futures = "0.3.31"
libp2p = { version = "0.54.1", features = ["full"] }
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
subql-indexer-utils = { git = "https://github.com/subquery/network-indexer-services.git", tag = "v2.8.1" }
tdn = { version = "0.10", default-features = false, features = ["single"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
